# aoauth

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.example.json
.cargo/: config
assets/: bootstrap.min.css
keys/: generate.sh
migrations/: 20210912090721_user-credentials.sql  20210912113709_characters.sql
src/: ao_bot.rs  auth.rs  characters.rs  config.rs  main.rs  templates.rs
templates/: base.html  choose.html  index.html  login.html  manage.html  signup.html
